--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=datingapp.db"
-  }
+  },
+  "TokenKey":"some super secret unguessable token key wow please dont hack me uwu"
 }
